cmake_minimum_required(VERSION 3.13)
project(Cpp_Project5)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp_Project5
        chain.cpp
        chain.hpp
        Demo.cpp
        powerset.cpp
        powerset.hpp
        product.cpp
        product.hpp
        range.hpp
        zip.cpp
        zip.hpp
        Test.cpp
        )